@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libmikmod/libmikmod-3.2.0-r1.ebuild,v 1.2 2013/05/03 14:28:34 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libmikmod/libmikmod-3.2.0-r1.ebuild,v 1.3 2013/06/27 18:11:02 aballier Exp $
 
 EAPI=5
 inherit autotools eutils multilib-minimal
@@ -12,11 +12,11 @@ SRC_URI="http://mikmod.shlomifish.org/files/${P}.tar.gz"
 LICENSE="LGPL-2+ LGPL-2.1"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
-IUSE="+alsa coreaudio oss static-libs"
+IUSE="+alsa altivec coreaudio debug oss static-libs +threads"
 
 REQUIRED_USE="|| ( alsa oss coreaudio )"
 
-RDEPEND="alsa? ( media-libs/alsa-lib:= )
+RDEPEND="alsa? ( media-libs/alsa-lib:=[${MULTILIB_USEDEP}] )
 	!${CATEGORY}/${PN}:2"
 DEPEND="${RDEPEND}
 	oss? ( virtual/os-headers )"
@@ -32,15 +32,22 @@ src_prepare() {
 multilib_src_configure() {
 	econf \
 		$(use_enable alsa) \
+		$(use_enable altivec) \
+		$(use_enable debug) \
 		--disable-nas \
 		$(use_enable coreaudio osx) \
 		$(use_enable oss) \
-		$(use_enable static-libs static)
+		$(use_enable static-libs static) \
+		$(use_enable threads) \
+		--disable-dl
 }
 
 multilib_src_install() {
 	emake DESTDIR="${D}" install
 	dosym ${PN}$(get_libname 3) /usr/$(get_libdir)/${PN}$(get_libname 2)
+
+	local libs="$("${ED}"/usr/bin/libmikmod-config --libs)"
+	local privlibs="${libs#*lmikmod}"
 
 	cat <<-EOF > "${T}"/${PN}.pc
 	prefix=/usr
@@ -50,8 +57,8 @@ multilib_src_install() {
 	Name: ${PN}
 	Description: ${DESCRIPTION}
 	Version: ${PV}
-	Libs: -L\${libdir} -lmikmod
-	Libs.private: -ldl -lm
+	Libs: ${libs%${privlibs}}
+	Libs.private: ${privlibs}
 	Cflags: -I\${includedir} $("${ED}"/usr/bin/libmikmod-config --cflags)
 	EOF
 
