@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libmikmod
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libmikmod/ChangeLog,v 1.107 2013/05/03 14:28:34 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libmikmod/ChangeLog,v 1.108 2013/06/27 18:11:02 aballier Exp $
+
+  27 Jun 2013; Alexis Ballier <aballier@gentoo.org> libmikmod-3.2.0-r1.ebuild:
+  Add missing MULTILIB_USEDEP on alsa-lib. Add altivec, debug and threads
+  useflags. Disable dlopening its libraries and link to them instead: We have
+  tools to detect breakage in case its linked, it is more complicated with
+  dlopen.
 
   03 May 2013; Samuli Suominen <ssuominen@gentoo.org> libmikmod-3.2.0.ebuild,
   libmikmod-3.2.0-r1.ebuild:
